# itmo-anlp

./: README.md  poetry.toml  pyproject.toml
notebooks/: homework_1.ipynb  homework_2.ipynb  homework_3.ipynb
