[tool.poetry]
name = "itmo-anlp"
version = "0.1.0"
description = "ITMO Advanced NLP (2022)"
authors = ["Sultan Zhumabaev <romtrash98@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "itmo_anlp"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
jupyter = "^1.0.0"
numpy = {url = "https://download.lfd.uci.edu/pythonlibs/archived/cp37/numpy-1.21.6+mkl-cp37-cp37m-win_amd64.whl"}
scipy = {url = "https://download.lfd.uci.edu/pythonlibs/archived/cp37/scipy-1.7.3-cp37-cp37m-win_amd64.whl"}
pandas = "1.3.5"
nltk = "^3.7"
scikit-learn = "1.0.2"
torch = "^1.12.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
